@@ -3,6 +3,14 @@ What's New in Python 2.1 alpha 1?
 
 Core language, builtins, and interpreter
 
+- There is a new Unicode companion to the builtin str() function
+  called unistr(). Like str(), it calls either the tp_str slot of
+  objects or the "__str__" method and converts the returned value
+  to an Unicode object (in case this is necessary).
+
+  The unistr() is complemented by a new PyObject_Unicode() C API
+  which behaves in the same way.
+
 - The comparison operators support "rich comparison overloading" (PEP
   207).  C extension types can provide a rich comparison function in
   the new tp_richcompare slot in the type object.  The cmp() function
